5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1752_3089.log
== TEST (2019-05-16 16:15:10) 
-- CODE:
m=int(input("movimento em metros: "))

s=0
co=0
while(m!=0):
	s+=m
	co+=1
	print(s)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:17:54) 
-- CODE:
m=int(input("movimento em metros: "))

s=0
co=0
soma=0
while(m!=0):
	soma=soma+m
	
	
if(soma>0):
	print("Direita")
if(soma<0)
	print("Esquerda")
print()	
-- ERROR:
File "XXXX", line 12
    if(soma<0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:18:08) 
-- CODE:
m=int(input("movimento em metros: "))

s=0
co=0
soma=0
while(m!=0):
	soma=soma+m
	
	
if(soma>0):
	print("Direita")
if(soma<0)
	print("Esquerda")
print(soma)	
-- ERROR:
File "XXXX", line 12
    if(soma<0)
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:04) 
-- CODE:
m=int(input("movimento em metros: "))

co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma+=m
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:11) 
-- CODE:
m=int(input("movimento em metros: "))

co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    soma+=m
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:29) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
-- OUTPUT:
2
1
2
1
2
1
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:21:46) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
-- OUTPUT:
2
1
2
1
2
1
2
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:22:02) 
-- CODE:

soma=1
co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    while(m!=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:23) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
-- OUTPUT:
2
1
2
1
2
1
2
0
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:29) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=0
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
-- OUTPUT:
2
1
2
1
2
1
2
0
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:23:45) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(m)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
-- OUTPUT:
2
1
2
1
2
1
2
0
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:15) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
print()	
-- OUTPUT:
3
4
6
7
9
10
12
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:18) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	co+=1
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
3
4
6
7
9
10
12
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:30) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
3
4
6
7
9
10
12
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:24:37) 
-- CODE:
m=int(input("movimento em metros: "))

soma=1
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
3
4
6
7
9
10
12
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:08) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	con=
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- ERROR:
File "XXXX", line 9
    con=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:14) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
2
3
5
6
8
9
11
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:20) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
2
3
5
6
8
9
11
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:25:41) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
4
5
7
8
10
11
13
13
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:25:49) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.186555
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
4
5
7
8
10
11
13
13
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
0
-3
-7
-12
-18
-25
-25
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-3
2
-8
-8
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:09) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
print(soma)

-- OUTPUT:
Direita
13
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:26:32) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
	
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")
print(soma)

-- EXECUTION TIME:
0.27695
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
Direita
13
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
Esquerda
-25
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
Esquerda
-8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:44) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
13
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:26:45) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.140438
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
13
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-25
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-8
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:26:46) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.110791
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
13
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-25
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-8
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:46) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
13
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:26:54) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:35) 
-- CODE:


while(m!=0):
	soma=0
	co=1
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    while(m!=0):
NameError: name 'm' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:27:44) 
-- CODE:
m=0

while(m!=0):
	soma=0
	co=1
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    print(soma)
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:05) 
-- CODE:
m=0

soma=0
co=1
while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:28:19) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2

while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.143991
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
13
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-25
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-8
Esquerda
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:28:19) 
-- CODE:
m=int(input("movimento em metros: "))

soma=2

while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
13
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:01) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0

while(m!=0):
	m=int(input("movimento em metros: "))
	soma+=m
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
11
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:29:54) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:30:05) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.210645
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Esquerda
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:30:20) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0
while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.185589
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Esquerda
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:30:20) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0
while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:28) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0
soma=1
while(m!=0):
	soma+=m*(soma)
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
1296
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:31:30) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0
soma=1
while(m!=0):
	soma+=m*(soma)
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.18915
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
1296
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
0
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
2376
Direita
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:34) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m*(soma)
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:31:49) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m*(soma)
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
0
Esquerda
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:32:06) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:08) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.119058
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Esquerda
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:10) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
else:
	print("Esquerda")

-- EXECUTION TIME:
0.200626
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Esquerda
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:25) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- EXECUTION TIME:
0.160491
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:26) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	co+=1
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- EXECUTION TIME:
0.149702
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:32:36) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0
co=0

while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
	
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- EXECUTION TIME:
0.143004
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:06) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:33:21) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- EXECUTION TIME:
0.22075
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:26) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:45) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:33:58) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")

-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:36) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.159063
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:37) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.143875
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
12
Direita
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:37) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.119207
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:37) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.153416
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
0
inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
12
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
12
Direita
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:38) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.140108
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
12
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
-28
Esquerda
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:38) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.246249
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1752/3089/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:39) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.148877
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
12
Direita
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
12
Direita
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:40) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.280998
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:40) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.217204
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
0
inicial
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
0
inicial
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:40) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.289661
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:40) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.329333
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
-28
Esquerda
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:

-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:41) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:34:42) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- EXECUTION TIME:
0.142226
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
inicial
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:34:51) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("inicial")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:35:09) 
-- CODE:
m=int(input("movimento em metros: "))

soma=0


while(m!=0):
	soma+=m
	m=int(input("movimento em metros: "))
print(soma)
	
if(soma>0):
	print("Direita")
if(soma<0):
	print("Esquerda")
if(soma==0):
	print("Inicial")
-- EXECUTION TIME:
0.137887
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
